# open-tas-controller

./: .clangd  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  build.sh  platformio.ini  upload.sh
controller/: opentas.py
controller/core/: movies.py  output.py  services.py
include/: base_device.h  circular_queue.h  commands.h  config.h  debug.h  devices.h  global.h  helpers.h  io.h  labels.h  loop_queue.h  n64.h  oneline.h  strings.h
include/consoles/common/: oneline.h
include/consoles/n64/: datastream.h  model.h  recorder.h
include/nintendo/: models.h  n64.h  n64_datastream.h  oneline.h
pio/: n64.pio  oneline.pio
sample_readings/: controller_pack_invalid.raw  no_controller.raw  unplug_mid_game.raw
src/: base_device.cpp  debug.cpp  devices.cpp  helpers.cpp  io.cpp  main.cpp  n64.cpp  oneline.cpp
src/consoles/common/: oneline.cpp
src/consoles/n64/: datastream.cpp  recorder.cpp
src/nintendo/: n64.cpp  n64_datastream.cpp  oneline.cpp
